--- a/launch/px4_config.yaml
+++ b/launch/px4_config.yaml
@@ -114,22 +114,22 @@ mission:
 
 # distance_sensor (PX4 only)
 distance_sensor:
-  hrlv_ez4_pub:
-    id: 0
-    frame_id: "hrlv_ez4_sonar"
-    orientation: ROLL_180 # RPY:{180.0, 0.0, 0.0}
-    field_of_view: 0.0  # XXX TODO
-    send_tf: true
-    sensor_position: {x:  0.0, y:  0.0, z:  -0.1}
+#  hrlv_ez4_pub:
+#    id: 0
+#    frame_id: "hrlv_ez4_sonar"
+#    orientation: ROLL_180 # RPY:{180.0, 0.0, 0.0}
+#    field_of_view: 0.0  # XXX TODO
+#    send_tf: false
+#    sensor_position: {x:  0.0, y:  0.0, z:  -0.1}
   lidarlite_pub:
-    id: 1
+    id: 0
     frame_id: "lidarlite_laser"
     orientation: ROLL_180
     field_of_view: 0.0  # XXX TODO
     send_tf: true
     sensor_position: {x:  0.0, y:  0.0, z:  -0.1}
-  sonar_1_sub:
-    subscriber: true
+  sonar_1_sub: 
+    subscriber: true 
     id: 2
     orientation: ROLL_180
   laser_1_sub:
