add test bench for homography

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ find_package(catkin REQUIRED dynamic_reconfigure)
 generate_dynamic_reconfigure_options(
    cfg/pid_gains.cfg
 	 cfg/picture.cfg
+	 cfg/moveCam.cfg
  )
 
 ###################################
