add gimbaled camera to lezl. still not recognized by px4, but model is built correctly (physically) need to check internals

--- a/gazebo/models/lezl_gimbal/model.config
+++ b/gazebo/models/lezl_gimbal/model.config
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <model>
-  <name>LEZL with rigid camera</name>
+  <name>LEZL with gimbaled camera</name>
   <version>1.0</version>
-  <sdf version='1.4'>lezl_cam.sdf</sdf>
+  <sdf version='1.4'>lezl_gimbal.sdf</sdf>
 
   <author>
    <name>Lorenz Meier and Thomas Gubler</name>
