--- a/launch/px4_config.yaml
+++ b/launch/px4_config.yaml
@@ -9,7 +9,7 @@ startup_px4_usb_quirk: true
 conn:
   heartbeat_rate: 1.0    # send hertbeat rate in Hertz
   timeout: 10.0          # hertbeat timeout in seconds
-  timesync_rate: 10.0    # TIMESYNC rate in Hertz (feature disabled if 0.0)
+  timesync_rate: 0.0    # TIMESYNC rate in Hertz (feature disabled if 0.0)
   system_time_rate: 1.0  # send system time to FCU rate in Hertz (disabled if 0.0)
 
 # sys_status
@@ -20,6 +20,7 @@ sys:
 # sys_time
 time:
   time_ref_source: "fcu"  # time_reference source
+  timesync_mode: NONE
   timesync_avg_alpha: 0.6 # timesync averaging factor
 
 # --- mavros plugins (alphabetical order) ---
