--- a/configs/T_fis.yaml
+++ b/configs/T_fis.yaml
@@ -1,11 +1,11 @@
 aggMethod: max
 andMethod: min
-defuzzMethod: centroid
+defuzzMethod: weightedMV
 impMethod: min
 input:
 - mf:
   - name: mf4
-    params: [-1.5, -1.0, 0.0]
+    params: [-1.0, -1.0, 0.0]
   - name: mf5
     params: [-1.0, -0.25, 0.0]
   - name: mf6
@@ -17,7 +17,7 @@ input:
   name: input1
 - mf:
   - name: mf1
-    params: [-1.5, -1.0, -0.0]
+    params: [-1.0, -1.0, -0.0]
   - name: mf2
     params: [-1.0, -0.25, 0.0]
   - name: mf3
@@ -25,14 +25,14 @@ input:
   - name: mf4
     params: [0.0, 0.25, 1.0]
   - name: mf5
-    params: [0.0, 1.0, 1.5]
+    params: [0.0, 1.0, 1.0]
   name: input2
 name: lezl3
 orMethod: max
 output:
 - mf:
   - name: mf1
-    params: [-1.5, -0.5, 0.0]
+    params: [-1.0, -1.0, 0.0]
   - name: mf2
     params: [-1.0, -0.125, 0.0]
   - name: mf3
@@ -40,7 +40,7 @@ output:
   - name: mf4
     params: [0.0, 0.125, 1.0]
   - name: mf5
-    params: [0.0, 0.5, 1.5]
+    params: [0.0, 1.0, 1.0]
   name: output1
 rules:
 - [0, 0, 4, 1, 0]
